# hyperfy

./: .env.example  AAA-GRAPHICS-SETTINGS-OVERVIEW.md  ADVANCED-LOADERS-IMPLEMENTATION.md  ADVANCED-POST-PROCESSING.md  BUG_FIXES_SUMMARY.md  CLEAN-CONTROL-REDESIGN.md  DOCKER.md  Dockerfile  ENHANCED-STATS-SYSTEM.md  ESC-MENU-SYSTEM.md  GLTF-COMPATIBILITY-FIXES.md  HYPERFY_TECHNICAL_DEV_REPORT.md  PHASE1-IMPROVEMENTS.md  PHASE2-IMPROVEMENTS.md  RENDERER-SELECTION.md  SIMPLIFIED-RENDERER-UX.md  SOPHISTICATED-ESC-INTERACTION-SYSTEM.md  WEBGPU-GLB-LOADING-FIXES.md  WEBGPU-IMPLEMENTATION.md  WEBXR-ENHANCEMENTS.md  build.mjs  docker-compose.yaml  package-lock.json  package.json  test-aaa-webgpu.html
.cursor/rules/: HyperfyApps.mdc  apps.mdc
.github/workflows/: docker.yml
docs/ref/: Particles.md
scripts/: build-tauri-resources.mjs  build-tauri-server.mjs  build.mjs  setup-node-sidecar.mjs  test-server-startup.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: hyperfy-server
src-tauri/src/: lib.rs  main.rs
src/client/: WorldContext.js  index.js  world-client.js
src/client/components/: App.js  CoreUI.js  GUI.js  GraphicsSettingsPane.js  InspectPane.js  MenuApp.js  MenuMain.js  SettingsPane.js  Sidebar.js
src/client/hooks/: useWorld.js
src/client/public/: index.html
src/client/utils/: gamepadMenu.js
src/core/: World.js  createClientWorld.js  lockdown.js  packets.js
src/core/assets/: emote-kick.glb  emote-punch.glb
src/core/entities/: App.js  PlayerLocal.js
src/server/: collections.js  index.js  tauri-bootstrap.js
(+111 files in other folders)
