[package]  
name = "hyperfy"  
version = "0.14.0"  
description = "Hyperfy Desktop Application"  
authors = ["you"]  
license = ""  
repository = ""  
edition = "2021"  
rust-version = "1.60"  
  
[build-dependencies]  
tauri-build = { version = "1.0", features = [] }  
  
[dependencies]  
serde_json = "1.0"  
serde = { version = "1.0", features = ["derive"] }  
tauri = { version = "1.0", features = [ "shell-open", "shell-sidecar"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }  
  
[features]  
default = ["custom-protocol"]  
custom-protocol = ["tauri/custom-protocol"]
